# CR3_ROS2

./: README.md
src/cr3_description/: CMakeLists.txt  package.xml
src/cr3_description/launch/: cr3_display_launch.py
src/cr3_description/urdf/: cr3_robot.urdf  urdf.rviz
src/cr3_scout_with_srvs/: package.xml  setup.cfg  setup.py
src/cr3_scout_with_srvs/config/: cam_info.yaml
src/cr3_scout_with_srvs/cr3_scout_with_srvs/: camera_intrin_info.py  cr3_service_clients.py  pelco_cam.py  pelco_cam_cmd_structs.py  scout.py  scout_with_zoom_camera.py  scout_with_zoom_camera_horiz.py
src/cr3_scout_with_srvs/launch/: cam_info_fake_pub_launch.py  camera_intrin_info_launch.py  scout_launch.py  scout_with_zoom_camera_horiz_launch.py  scout_with_zoom_camera_launch.py
src/dobot_bringup/: CMakeLists.txt  package.xml
src/dobot_bringup/include/dobot_bringup/: commander.h  cr5_robot.h
src/dobot_bringup/launch/: cr5_bringup_launch.py
src/dobot_bringup/src/: cr5_robot.cpp  main.cpp  tcp_socket.cpp
src/dobot_bringup_msg/: CMakeLists.txt  package.xml
src/dobot_bringup_srv/: CMakeLists.txt  package.xml
src/dobot_bringup_srv/srv/: Arc.srv  GetHoldRegs.srv  MoveJog.srv  RunScript.srv  SetArmOrientation.srv  SetHoldRegs.srv
src/object_world_pub/: package.xml  setup.cfg  setup.py
src/object_world_pub/config/: cam_info.yaml
src/object_world_pub/launch/: cr3_object_world_pub_test_launch.py  object_world_pub_bunker_gazebo3_launch.py  object_world_pub_bunker_gazebo4_launch.py  object_world_pub_bunker_gazebo5_launch.py  object_world_pub_bunker_gazebo6_launch.py  object_world_pub_bunker_gazebo_launch.py  object_world_pub_bunker_launch.py  object_world_pub_launch.py
src/object_world_pub/object_world_pub/: cam_info_fake_pub.py  image_undistor.py  object_world_pub.py  object_world_pub_bunker.py  object_world_pub_bunker_gazebo.py  object_world_pub_bunker_gazebo3.py  object_world_pub_bunker_gazebo4.py  object_world_pub_bunker_gazebo5.py  object_world_pub_bunker_gazebo6.py  pixel_fake_pub.py  pixel_tf_fake_pub.py  test.py  test_tmp.py  world_cr3_test.py
src/scout_interfaces_msg/: CMakeLists.txt  package.xml
src/scout_interfaces_msg/msg/: CameraIntrin.msg  ObjectPixel.msg  ObjectPixelTfMixed.msg  ObjectPixelTfMixed3.msg  ObjectPixelTfMixed4.msg  ObjectPixelTfMixed5.msg  ObjectPixelTfMixed6.msg  ObjectPixelTfMixed7.msg  ObjectPixelTfMixed8.msg  ObjectWorld.msg
src/tf_extend/: package.xml  setup.cfg  setup.py
src/tf_extend/launch/: cr3_world_to_camera_launch.py  world_to_camera_gazebo_launch.py  world_to_camera_launch.py
src/tf_extend/tf_extend/: Link6_to_camera.py  bunker_to_camera.py  world_to_camera_bunker_pub.py  world_to_camera_pub.py  world_to_camera_test.py  world_to_cr3_dummy.py
